# class_design

./: CMakeLists.txt  LICENSE  README.md
.qtcreator/: CMakeLists.txt.user.b12dfae
docs/: program.txt
launch/: build.sh  start.sh  storage.sh
src/: Cell.cpp  Cell.h  FileFormat.cpp  FileFormat.h  FormulaParser.cpp  FormulaParser.h  Spreadsheet.cpp  Spreadsheet.h  main.cpp
storage/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
